{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 456,
  "lineage": "9e3b3282-925d-5c10-6732-5e15d3dbbe5d",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0724aa8bc1b11b51c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-050a048e59c0fab47",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-050a048e59c0fab47",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "joseph-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-02c5290ecfe788c4b",
            "private_dns": "ip-10-0-1-184.eu-west-1.compute.internal",
            "private_ip": "10.0.1.184",
            "public_ip": "3.248.213.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03665d712998925d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089235179d32747f6",
            "tags": {
              "Name": "Eng-48-Joe-P-app_app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d39ef4b8dd3208db"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_sg",
            "module.app.aws_subnet.app_subnet",
            "module.db.aws_instance.db_instance",
            "module.db.aws_security_group.db_sg",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0983c8db834b7437c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-09ed281d1aac32f4d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09ed281d1aac32f4d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "joseph-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e72a4595e879c4f1",
            "private_dns": "ip-10-0-2-55.eu-west-1.compute.internal",
            "private_ip": "10.0.2.55",
            "public_ip": "52.30.205.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a9e077c12ecb7ce2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e7fba64bc5daac3",
            "tags": {
              "Name": "Eng-48-Joe-P-app_db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0099c61cc173ebd94"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_sg",
            "module.db.aws_security_group.db_sg",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06bf907fa18eaacf6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-48-Joe-P-app"
            },
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05613bd7ada11d385",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bf907fa18eaacf6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng-48-Joe-P-app"
            },
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453eb06e0d4fccd8",
            "route_table_id": "rtb-05613bd7ada11d385",
            "subnet_id": "subnet-089235179d32747f6"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0d39ef4b8dd3208db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d39ef4b8dd3208db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200131104729056800000001",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng-48-Joe-P-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0099c61cc173ebd94",
            "description": "Allow traffic from app",
            "egress": [],
            "id": "sg-0099c61cc173ebd94",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d39ef4b8dd3208db"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d39ef4b8dd3208db"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Eng-48-Joe-P-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng-48-Joe-P-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-089235179d32747f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-089235179d32747f6",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-48-Joe-P-app-app"
            },
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-09e7fba64bc5daac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09e7fba64bc5daac3",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-48-Joe-P-app-db"
            },
            "vpc_id": "vpc-08a4c1c4d7716e7bb"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-08a4c1c4d7716e7bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d253512a7617138e",
            "default_route_table_id": "rtb-06dd1eab77ab2517d",
            "default_security_group_id": "sg-034d9a00e524ceeac",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a4c1c4d7716e7bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06dd1eab77ab2517d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-48-Joe-P-app"
            }
          }
        }
      ]
    }
  ]
}